@@ -20,11 +20,7 @@ import org.springframework.core.env.AbstractEnvironment;
 import org.springframework.core.env.MapPropertySource;
 import org.springframework.util.StringUtils;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 @JsonIgnoreProperties(ignoreUnknown = true)
 public class LdapIdentityProviderDefinition extends ExternalIdentityProviderDefinition {
@@ -72,57 +68,13 @@ public class LdapIdentityProviderDefinition extends ExternalIdentityProviderDefi
     public static final String MAIL = "mail";
 
     public static final List<String> VALID_PROFILE_FILES =
-        Collections.unmodifiableList(
-            Arrays.asList(
-                "ldap/ldap-search-and-bind.xml",
-                "ldap/ldap-search-and-compare.xml",
-                "ldap/ldap-simple-bind.xml"
-            )
-        );
+            List.of("ldap/ldap-search-and-bind.xml", "ldap/ldap-search-and-compare.xml", "ldap/ldap-simple-bind.xml");
 
     public static final List<String> VALID_GROUP_FILES =
-        Collections.unmodifiableList(
-            Arrays.asList(
-                "ldap/ldap-groups-as-scopes.xml",
-                "ldap/ldap-groups-map-to-scopes.xml",
-                "ldap/ldap-groups-null.xml",
-                "ldap/ldap-groups-populator.xml"
-            )
-        );
+            List.of("ldap/ldap-groups-as-scopes.xml", "ldap/ldap-groups-map-to-scopes.xml", "ldap/ldap-groups-null.xml", "ldap/ldap-groups-populator.xml");
 
 
-    public static final List<String> LDAP_PROPERTY_NAMES = Collections.unmodifiableList(
-        Arrays.asList(
-            LDAP_ATTRIBUTE_MAPPINGS,
-            LDAP_BASE_LOCAL_PASSWORD_COMPARE,
-            LDAP_BASE_MAIL_ATTRIBUTE_NAME,
-            LDAP_BASE_MAIL_SUBSTITUTE,
-            LDAP_BASE_MAIL_SUBSTITUTE_OVERRIDES_LDAP,
-            LDAP_BASE_PASSWORD,
-            LDAP_BASE_PASSWORD_ATTRIBUTE_NAME,
-            LDAP_BASE_PASSWORD_ENCODER,
-            LDAP_BASE_REFERRAL,
-            LDAP_BASE_SEARCH_BASE,
-            LDAP_BASE_SEARCH_FILTER,
-            LDAP_BASE_URL,
-            LDAP_BASE_USER_DN,
-            LDAP_BASE_USER_DN_PATTERN,
-            LDAP_BASE_USER_DN_PATTERN_DELIMITER,
-            LDAP_EMAIL_DOMAIN,
-            LDAP_EXTERNAL_GROUPS_WHITELIST,
-            LDAP_GROUPS_AUTO_ADD,
-            LDAP_GROUPS_FILE,
-            LDAP_GROUPS_GROUP_ROLE_ATTRIBUTE,
-            LDAP_GROUPS_GROUP_SEARCH_FILTER,
-            LDAP_GROUPS_IGNORE_PARTIAL_RESULT_EXCEPTION,
-            LDAP_GROUPS_MAX_SEARCH_DEPTH,
-            LDAP_GROUPS_SEARCH_BASE,
-            LDAP_GROUPS_SEARCH_SUBTREE,
-            LDAP_PROFILE_FILE,
-            LDAP_SSL_SKIPVERIFICATION,
-            LDAP_SSL_TLS
-        )
-    );
+    public static final List<String> LDAP_PROPERTY_NAMES = List.of(LDAP_ATTRIBUTE_MAPPINGS, LDAP_BASE_LOCAL_PASSWORD_COMPARE, LDAP_BASE_MAIL_ATTRIBUTE_NAME, LDAP_BASE_MAIL_SUBSTITUTE, LDAP_BASE_MAIL_SUBSTITUTE_OVERRIDES_LDAP, LDAP_BASE_PASSWORD, LDAP_BASE_PASSWORD_ATTRIBUTE_NAME, LDAP_BASE_PASSWORD_ENCODER, LDAP_BASE_REFERRAL, LDAP_BASE_SEARCH_BASE, LDAP_BASE_SEARCH_FILTER, LDAP_BASE_URL, LDAP_BASE_USER_DN, LDAP_BASE_USER_DN_PATTERN, LDAP_BASE_USER_DN_PATTERN_DELIMITER, LDAP_EMAIL_DOMAIN, LDAP_EXTERNAL_GROUPS_WHITELIST, LDAP_GROUPS_AUTO_ADD, LDAP_GROUPS_FILE, LDAP_GROUPS_GROUP_ROLE_ATTRIBUTE, LDAP_GROUPS_GROUP_SEARCH_FILTER, LDAP_GROUPS_IGNORE_PARTIAL_RESULT_EXCEPTION, LDAP_GROUPS_MAX_SEARCH_DEPTH, LDAP_GROUPS_SEARCH_BASE, LDAP_GROUPS_SEARCH_SUBTREE, LDAP_PROFILE_FILE, LDAP_SSL_SKIPVERIFICATION, LDAP_SSL_TLS);
 
     public static final Map<String, Class<?>> LDAP_PROPERTY_TYPES = new HashMap<>();
 
@@ -461,45 +413,45 @@ public class LdapIdentityProviderDefinition extends ExternalIdentityProviderDefi
         LdapIdentityProviderDefinition that = (LdapIdentityProviderDefinition) o;
 
         if (maxGroupSearchDepth != that.maxGroupSearchDepth) return false;
-        if (ldapProfileFile != null ? !ldapProfileFile.equals(that.ldapProfileFile) : that.ldapProfileFile != null)
+        if (!Objects.equals(ldapProfileFile, that.ldapProfileFile))
             return false;
-        if (baseUrl != null ? !baseUrl.equals(that.baseUrl) : that.baseUrl != null) return false;
-        if (referral != null ? !referral.equals(that.referral) : that.referral != null) return false;
-        if (userDNPattern != null ? !userDNPattern.equals(that.userDNPattern) : that.userDNPattern != null)
+        if (!Objects.equals(baseUrl, that.baseUrl)) return false;
+        if (!Objects.equals(referral, that.referral)) return false;
+        if (!Objects.equals(userDNPattern, that.userDNPattern))
             return false;
-        if (userDNPatternDelimiter != null ? !userDNPatternDelimiter.equals(that.userDNPatternDelimiter) : that.userDNPatternDelimiter != null)
+        if (!Objects.equals(userDNPatternDelimiter, that.userDNPatternDelimiter))
             return false;
-        if (bindUserDn != null ? !bindUserDn.equals(that.bindUserDn) : that.bindUserDn != null) return false;
-        if (bindPassword != null ? !bindPassword.equals(that.bindPassword) : that.bindPassword != null) return false;
-        if (userSearchBase != null ? !userSearchBase.equals(that.userSearchBase) : that.userSearchBase != null)
+        if (!Objects.equals(bindUserDn, that.bindUserDn)) return false;
+        if (!Objects.equals(bindPassword, that.bindPassword)) return false;
+        if (!Objects.equals(userSearchBase, that.userSearchBase))
             return false;
-        if (userSearchFilter != null ? !userSearchFilter.equals(that.userSearchFilter) : that.userSearchFilter != null)
+        if (!Objects.equals(userSearchFilter, that.userSearchFilter))
             return false;
-        if (passwordAttributeName != null ? !passwordAttributeName.equals(that.passwordAttributeName) : that.passwordAttributeName != null)
+        if (!Objects.equals(passwordAttributeName, that.passwordAttributeName))
             return false;
-        if (passwordEncoder != null ? !passwordEncoder.equals(that.passwordEncoder) : that.passwordEncoder != null)
+        if (!Objects.equals(passwordEncoder, that.passwordEncoder))
             return false;
-        if (localPasswordCompare != null ? !localPasswordCompare.equals(that.localPasswordCompare) : that.localPasswordCompare != null)
+        if (!Objects.equals(localPasswordCompare, that.localPasswordCompare))
             return false;
-        if (mailAttributeName != null ? !mailAttributeName.equals(that.mailAttributeName) : that.mailAttributeName != null)
+        if (!Objects.equals(mailAttributeName, that.mailAttributeName))
             return false;
-        if (mailSubstitute != null ? !mailSubstitute.equals(that.mailSubstitute) : that.mailSubstitute != null)
+        if (!Objects.equals(mailSubstitute, that.mailSubstitute))
             return false;
-        if (mailSubstituteOverridesLdap != null ? !mailSubstituteOverridesLdap.equals(that.mailSubstituteOverridesLdap) : that.mailSubstituteOverridesLdap != null)
+        if (!Objects.equals(mailSubstituteOverridesLdap, that.mailSubstituteOverridesLdap))
             return false;
-        if (ldapGroupFile != null ? !ldapGroupFile.equals(that.ldapGroupFile) : that.ldapGroupFile != null)
+        if (!Objects.equals(ldapGroupFile, that.ldapGroupFile))
             return false;
-        if (groupSearchBase != null ? !groupSearchBase.equals(that.groupSearchBase) : that.groupSearchBase != null)
+        if (!Objects.equals(groupSearchBase, that.groupSearchBase))
             return false;
-        if (groupSearchFilter != null ? !groupSearchFilter.equals(that.groupSearchFilter) : that.groupSearchFilter != null)
+        if (!Objects.equals(groupSearchFilter, that.groupSearchFilter))
             return false;
-        if (groupsIgnorePartialResults != null ? !groupsIgnorePartialResults.equals(that.groupsIgnorePartialResults) : that.groupsIgnorePartialResults != null)
+        if (!Objects.equals(groupsIgnorePartialResults, that.groupsIgnorePartialResults))
             return false;
-        if (autoAddGroups != null ? !autoAddGroups.equals(that.autoAddGroups) : that.autoAddGroups != null)
+        if (!Objects.equals(autoAddGroups, that.autoAddGroups))
             return false;
-        if (groupSearchSubTree != null ? !groupSearchSubTree.equals(that.groupSearchSubTree) : that.groupSearchSubTree != null)
+        if (!Objects.equals(groupSearchSubTree, that.groupSearchSubTree))
             return false;
-        return !(groupRoleAttribute != null ? !groupRoleAttribute.equals(that.groupRoleAttribute) : that.groupRoleAttribute != null);
+        return Objects.equals(groupRoleAttribute, that.groupRoleAttribute);
 
     }
 
