@@ -12,6 +12,20 @@
  *******************************************************************************/
 package org.cloudfoundry.identity.uaa.util;
 
+import org.apache.http.HeaderElement;
+import org.apache.http.HeaderElementIterator;
+import org.apache.http.HttpResponse;
+import org.apache.http.config.Registry;
+import org.apache.http.config.RegistryBuilder;
+import org.apache.http.conn.ConnectionKeepAliveStrategy;
+import org.apache.http.conn.socket.ConnectionSocketFactory;
+import org.apache.http.conn.socket.PlainConnectionSocketFactory;
+import org.apache.http.conn.ssl.SSLConnectionSocketFactory;
+import org.apache.http.impl.conn.PoolingHttpClientConnectionManager;
+import org.apache.http.message.BasicHeaderElementIterator;
+import org.apache.http.protocol.HTTP;
+import org.apache.http.protocol.HttpContext;
+import org.apache.http.util.TextUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.apache.http.conn.ssl.NoopHostnameVerifier;
@@ -26,13 +40,15 @@ import org.springframework.http.client.HttpComponentsClientHttpRequestFactory;
 import org.springframework.web.context.request.RequestAttributes;
 import org.springframework.web.context.request.RequestContextHolder;
 
+import javax.net.ssl.HostnameVerifier;
 import javax.net.ssl.SSLContext;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.security.KeyManagementException;
 import java.security.KeyStoreException;
 import java.security.NoSuchAlgorithmException;
 import java.util.Map;
+import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
 import static java.util.Arrays.stream;
@@ -42,7 +58,11 @@ public abstract class UaaHttpRequestUtils {
     private static Logger logger = LoggerFactory.getLogger(UaaHttpRequestUtils.class);
 
     public static ClientHttpRequestFactory createRequestFactory(boolean skipSslValidation, int timeout) {
-        return createRequestFactory(getClientBuilder(skipSslValidation), timeout);
+        return createRequestFactory(getClientBuilder(skipSslValidation, 10, 5, 0), timeout);
+    }
+
+    public static ClientHttpRequestFactory createRequestFactory(boolean skipSslValidation, int timeout, int poolSize, int defaultMaxPerRoute, int maxKeepAlive) {
+        return createRequestFactory(getClientBuilder(skipSslValidation, poolSize, defaultMaxPerRoute, maxKeepAlive), timeout);
     }
 
     protected static ClientHttpRequestFactory createRequestFactory(HttpClientBuilder builder, int timeoutInMs) {
@@ -54,26 +74,42 @@ public abstract class UaaHttpRequestUtils {
         return httpComponentsClientHttpRequestFactory;
     }
 
-    protected static HttpClientBuilder getClientBuilder(boolean skipSslValidation) {
+    protected static HttpClientBuilder getClientBuilder(boolean skipSslValidation, int poolSize, int defaultMaxPerRoute, int maxKeepAlive) {
         HttpClientBuilder builder = HttpClients.custom()
             .useSystemProperties()
             .setRedirectStrategy(new DefaultRedirectStrategy());
+        PoolingHttpClientConnectionManager cm;
         if (skipSslValidation) {
-            builder.setSslcontext(getNonValidatingSslContext());
-            builder.setSSLHostnameVerifier(new NoopHostnameVerifier());
+            SSLContext sslContext = getNonValidatingSslContext();
+            final String[] supportedProtocols = split(System.getProperty("https.protocols"));
+            final String[] supportedCipherSuites = split(System.getProperty("https.cipherSuites"));
+            HostnameVerifier hostnameVerifierCopy = new NoopHostnameVerifier();
+            SSLConnectionSocketFactory sslSocketFactory = new SSLConnectionSocketFactory(sslContext, supportedProtocols, supportedCipherSuites, hostnameVerifierCopy);
+            Registry<ConnectionSocketFactory> socketFactoryRegistry = RegistryBuilder.<ConnectionSocketFactory> create()
+                    .register("https", sslSocketFactory)
+                    .register("http", PlainConnectionSocketFactory.getSocketFactory())
+                    .build();
+            cm = new PoolingHttpClientConnectionManager(socketFactoryRegistry);
+        } else {
+            cm = new PoolingHttpClientConnectionManager();
         }
-        builder.setConnectionReuseStrategy(NoConnectionReuseStrategy.INSTANCE);
+        cm.setMaxTotal(poolSize);
+        cm.setDefaultMaxPerRoute(defaultMaxPerRoute);
+        builder.setConnectionManager(cm);
+
+        if (maxKeepAlive <= 0) {
+            builder.setConnectionReuseStrategy(NoConnectionReuseStrategy.INSTANCE);
+        } else {
+            builder.setKeepAliveStrategy(new UaaConnectionKeepAliveStrategy(maxKeepAlive));
+        }
+
         return builder;
     }
 
     private static SSLContext getNonValidatingSslContext() {
         try {
             return new SSLContextBuilder().loadTrustMaterial(null, new TrustSelfSignedStrategy()).build();
-        } catch (KeyManagementException e) {
-            throw new RuntimeException(e);
-        } catch (NoSuchAlgorithmException e) {
-            throw new RuntimeException(e);
-        } catch (KeyStoreException e) {
+        } catch (KeyManagementException | KeyStoreException | NoSuchAlgorithmException e) {
             throw new RuntimeException(e);
         }
     }
@@ -85,11 +121,7 @@ public abstract class UaaHttpRequestUtils {
     }
 
     private static String encodeParameter(String value) {
-        try {
-            return URLEncoder.encode(value, "UTF-8");
-        } catch (UnsupportedEncodingException e) {
-            throw new RuntimeException(e);
-        }
+        return URLEncoder.encode(value, StandardCharsets.UTF_8);
     }
 
     public static boolean isAcceptedInvitationAuthentication() {
@@ -98,7 +130,7 @@ public abstract class UaaHttpRequestUtils {
             if (attr!=null) {
                 Boolean result = (Boolean) attr.getAttribute("IS_INVITE_ACCEPTANCE", RequestAttributes.SCOPE_SESSION);
                 if (result!=null) {
-                    return result.booleanValue();
+                    return result;
                 }
             }
         } catch (IllegalStateException x) {
@@ -107,5 +139,43 @@ public abstract class UaaHttpRequestUtils {
 
         }
         return false;
+    }
+
+    private static class UaaConnectionKeepAliveStrategy implements ConnectionKeepAliveStrategy {
+
+        private static final String TIMEOUT = "timeout";
+
+        private final long connectionKeepAliveMax;
+
+        public UaaConnectionKeepAliveStrategy(long connectionKeepAliveMax) {
+            this.connectionKeepAliveMax = connectionKeepAliveMax;
+        }
+
+        @Override public long getKeepAliveDuration(HttpResponse httpResponse, HttpContext httpContext) {
+            HeaderElementIterator elementIterator = new BasicHeaderElementIterator(httpResponse.headerIterator(HTTP.CONN_KEEP_ALIVE));
+            long result = connectionKeepAliveMax;
+
+            while (elementIterator.hasNext()) {
+                HeaderElement element = elementIterator.nextElement();
+                String elementName = element.getName();
+                String elementValue = element.getValue();
+                if (elementValue != null && elementName != null && elementName.equalsIgnoreCase(TIMEOUT)) {
+                    try {
+                        result = Math.min(TimeUnit.SECONDS.toMillis(Long.parseLong(elementValue)), connectionKeepAliveMax);
+                    } catch (NumberFormatException e) {
+                        //Ignore Exception and keep current elementValue of result
+                    }
+                    break;
+                }
+            }
+            return result;
+        }
+    }
+
+    private static String[] split(final String s) {
+        if (TextUtils.isBlank(s)) {
+            return null;
+        }
+        return s.split(" *, *");
     }
 }
