@@ -13,6 +13,7 @@
 package org.cloudfoundry.identity.uaa.integration.feature;
 
 import com.fasterxml.jackson.core.type.TypeReference;
+
 import org.cloudfoundry.identity.uaa.ServerRunning;
 import org.cloudfoundry.identity.uaa.account.UserInfoResponse;
 import org.cloudfoundry.identity.uaa.constants.OriginKeys;
@@ -21,7 +22,7 @@ import org.cloudfoundry.identity.uaa.integration.util.ScreenshotOnFail;
 import org.cloudfoundry.identity.uaa.oauth.jwt.Jwt;
 import org.cloudfoundry.identity.uaa.oauth.jwt.JwtHelper;
 import org.cloudfoundry.identity.uaa.oauth.token.ClaimConstants;
-import org.cloudfoundry.identity.uaa.provider.AbstractXOAuthIdentityProviderDefinition;
+import org.cloudfoundry.identity.uaa.provider.AbstractExternalOAuthIdentityProviderDefinition;
 import org.cloudfoundry.identity.uaa.provider.IdentityProvider;
 import org.cloudfoundry.identity.uaa.provider.OIDCIdentityProviderDefinition;
 import org.cloudfoundry.identity.uaa.provider.SamlIdentityProviderDefinition;
@@ -51,6 +52,7 @@ import org.springframework.security.oauth2.common.util.RandomValueStringGenerato
 import org.springframework.security.oauth2.provider.client.BaseClientDetails;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit4.SpringJUnit4ClassRunner;
+import org.springframework.util.StringUtils;
 import org.springframework.web.client.RestOperations;
 import org.springframework.web.client.RestTemplate;
 
@@ -59,6 +61,7 @@ import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.net.UnknownHostException;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -66,6 +69,8 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
+
+import static org.cloudfoundry.identity.uaa.integration.util.IntegrationTestUtils.SIMPLESAMLPHP_LOGIN_PROMPT_XPATH_EXPR;
 import static org.cloudfoundry.identity.uaa.integration.util.IntegrationTestUtils.isMember;
 import static org.cloudfoundry.identity.uaa.oauth.token.ClaimConstants.SUB;
 import static org.cloudfoundry.identity.uaa.oauth.token.TokenConstants.GRANT_TYPE_AUTHORIZATION_CODE;
@@ -75,6 +80,7 @@ import static org.hamcrest.Matchers.containsString;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.startsWith;
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertNotEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
@@ -116,7 +122,7 @@ public class OIDCLoginIT {
     private String adminToken;
     private String subdomain;
     private String zoneUrl;
-    private IdentityProvider<AbstractXOAuthIdentityProviderDefinition> identityProvider;
+    private IdentityProvider<AbstractExternalOAuthIdentityProviderDefinition> identityProvider;
     private String clientCredentialsToken;
     private BaseClientDetails zoneClient;
     private ScimGroup createdGroup;
@@ -251,20 +257,45 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void successfulLoginWithOIDCProvider() throws Exception {
+    public void successfulLoginWithOIDCProvider() {
         Long beforeTest = System.currentTimeMillis();
         validateSuccessfulOIDCLogin(zoneUrl, testAccounts.getUserName(), testAccounts.getPassword());
         Long afterTest = System.currentTimeMillis();
         String zoneAdminToken = IntegrationTestUtils.getClientCredentialsToken(serverRunning, "admin", "adminsecret");
         String origUserId = IntegrationTestUtils.getUserId(adminToken, baseUrl, "uaa", testAccounts.getUserName());
-        ScimUser user = IntegrationTestUtils.getUserByZone(zoneAdminToken, baseUrl, subdomain, testAccounts.getUserName());
+        ScimUser user = IntegrationTestUtils
+                .getUserByZone(zoneAdminToken, baseUrl, subdomain, testAccounts.getUserName());
         IntegrationTestUtils.validateUserLastLogon(user, beforeTest, afterTest);
         assertEquals(origUserId, user.getExternalId());
         assertEquals(user.getGivenName(), user.getUserName());
     }
 
     @Test
-    public void testLoginWithInactiveProviderDoesNotWork() throws Exception {
+    public void loginWithOIDCProviderUpdatesExternalId() {
+        Long beforeTest = System.currentTimeMillis();
+
+        String zoneAdminToken = IntegrationTestUtils.getClientCredentialsToken(serverRunning, "admin", "adminsecret");
+        String zoneClientToken = IntegrationTestUtils.getClientCredentialsToken(zoneUrl, zoneClient.getClientId(), zoneClient.getClientSecret());
+        ScimUser minimalShadowUser = new ScimUser();
+        minimalShadowUser.setUserName(testAccounts.getUserName());
+        minimalShadowUser.addEmail(testAccounts.getUserName());
+        minimalShadowUser.setOrigin(identityProvider.getOriginKey());
+        IntegrationTestUtils.createUser(zoneClientToken, zoneUrl, minimalShadowUser, null);
+        ScimUser userCreated = IntegrationTestUtils.getUserByZone(zoneAdminToken, baseUrl, subdomain, testAccounts.getUserName());
+        assertFalse(StringUtils.hasText(userCreated.getExternalId()));
+
+        validateSuccessfulOIDCLogin(zoneUrl, testAccounts.getUserName(), testAccounts.getPassword());
+        Long afterTest = System.currentTimeMillis();
+        String origUserId = IntegrationTestUtils.getUserId(adminToken, baseUrl, "uaa", testAccounts.getUserName());
+        ScimUser user = IntegrationTestUtils.getUserByZone(zoneAdminToken, baseUrl, subdomain, testAccounts.getUserName());
+        IntegrationTestUtils.validateUserLastLogon(user, beforeTest, afterTest);
+        assertEquals(origUserId, user.getExternalId());
+        assertEquals(user.getGivenName(), user.getUserName());
+        assertTrue(StringUtils.hasText(user.getExternalId()));
+    }
+
+    @Test
+    public void testLoginWithInactiveProviderDoesNotWork() {
         webDriver.get(zoneUrl + "/logout.do");
         webDriver.get(zoneUrl + "/");
         Cookie beforeLogin = webDriver.manage().getCookieNamed("JSESSIONID");
@@ -288,9 +319,9 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void testLoginWithLoginHintUaa() throws Exception {
+    public void testLoginWithLoginHintUaa() {
         webDriver.get(zoneUrl + "/logout.do");
-        String loginHint = URLEncoder.encode("{\"origin\":\"puppy\"}", "utf-8");
+        String loginHint = URLEncoder.encode("{\"origin\":\"puppy\"}", StandardCharsets.UTF_8);
 
         webDriver.get(zoneUrl + "/login?login_hint=" + loginHint);
 
@@ -298,7 +329,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void successfulLoginWithOIDCProviderWithExternalGroups() throws Exception {
+    public void successfulLoginWithOIDCProviderWithExternalGroups() {
 
         validateSuccessfulOIDCLogin(zoneUrl, testAccounts.getUserName(), testAccounts.getPassword());
         String adminToken = IntegrationTestUtils.getClientCredentialsToken(serverRunning, "admin", "adminsecret");
@@ -310,7 +341,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void successfulLoginWithOIDCProviderAndClientAuthInBody() throws Exception {
+    public void successfulLoginWithOIDCProviderAndClientAuthInBody() {
         identityProvider.getConfig().setClientAuthInBody(true);
         assertTrue(identityProvider.getConfig().isClientAuthInBody());
         updateProvider();
@@ -319,7 +350,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void successfulLoginWithOIDCProviderSetsLastLogin() throws Exception {
+    public void successfulLoginWithOIDCProviderSetsLastLogin() {
         login(zoneUrl, testAccounts.getUserName(), testAccounts.getPassword());
         doLogout(zoneUrl);
         login(zoneUrl, testAccounts.getUserName(), testAccounts.getPassword());
@@ -352,7 +383,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void testShadowUserNameDefaultsToOIDCSubjectClaim() throws Exception {
+    public void testShadowUserNameDefaultsToOIDCSubjectClaim() {
         Map<String, Object> attributeMappings = new HashMap<>(identityProvider.getConfig().getAttributeMappings());
         attributeMappings.remove(USER_NAME_ATTRIBUTE_NAME);
         identityProvider.getConfig().setAttributeMappings(attributeMappings);
@@ -428,7 +459,7 @@ public class OIDCLoginIT {
             Assert.assertThat(webDriver.getCurrentUrl(), containsString(baseUrl));
 
             webDriver.findElement(By.linkText("SAML Login")).click();
-            webDriver.findElement(By.xpath("//h2[contains(text(), 'Enter your username and password')]"));
+            webDriver.findElement(By.xpath(SIMPLESAMLPHP_LOGIN_PROMPT_XPATH_EXPR));
             webDriver.findElement(By.name("username")).clear();
             webDriver.findElement(By.name("username")).sendKeys("marissa6");
             webDriver.findElement(By.name("password")).sendKeys("saml6");
@@ -480,7 +511,7 @@ public class OIDCLoginIT {
     }
 
     @Test
-    public void testResponseTypeRequired() throws Exception {
+    public void testResponseTypeRequired() {
         BaseClientDetails uaaClient = new BaseClientDetails(new RandomValueStringGenerator().generate(), null, "openid,user_attributes", "authorization_code,client_credentials", "uaa.admin,scim.read,scim.write,uaa.resource", baseUrl);
         uaaClient.setClientSecret("secret");
         uaaClient.setAutoApproveScopes(Collections.singleton("true"));
@@ -512,7 +543,7 @@ public class OIDCLoginIT {
         config.setRelyingPartyId("8c5ea049-869e-47f8-a492-852a05f507af");
         config.setRelyingPartySecret(null);
         config.setIssuer("https://sts.windows.net/9bc40aaf-e150-4c30-bb3c-a8b3b677266e/");
-        config.setScopes(Arrays.asList("openid"));
+        config.setScopes(Collections.singletonList("openid"));
         config.setResponseType("code id_token");
         return config;
     }
